fixed word wrapping on underscore

--- a/public/syman/style.css
+++ b/public/syman/style.css
@@ -21,7 +21,7 @@ h1 {
 .emoji-row {
   padding-bottom: 1.5em;
   text-align: center;
-  width: 200px;
+  /*width: 200px;
   display: block;
-  margin: 0 auto;
+  margin: 0 auto;*/
 }
